--- a/index.html
+++ b/index.html
@@ -6,10 +6,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Folcarelli Avogadro</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poiret+One&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-    <h1>Ciao!</h1>
+
+    <div class="wrapper">
+
+
+        <h1>M. Folcarelli</h1>
+
+        <figure>
+            <blockquote>
+                <p>
+                    Penso che la cosa più misericordiosa al mondo sia l'incapacità della mente umana di mettere in
+                    relazione i
+                    suoi molti contenuti. Viviamo su una placida isola d'ignoranza in mezzo a neri mari d'infinito e non
+                    era
+                    previsto che ce ne spingessimo troppo lontano. Le scienze, che finora hanno proseguito ognuna per la
+                    sua
+                    strada, non ci hanno arrecato troppo danno: ma la ricomposizione del quadro d'insieme ci aprirà, un
+                    giorno,
+                    visioni così terrificanti della realtà e del posto che noi occupiamo in essa, che o impazziremo per
+                    la
+                    rivelazione o fuggiremo dalla luce mortale nella pace e nella sicurezza di una nuova età oscura.
+                </p>
+            </blockquote>
+            <figcaption>
+                by H.P. Lovecraft.
+            </figcaption>
+        </figure>
+
+
+    </div>
 </body>
 
 </html>
